--- a/style.css
+++ b/style.css
@@ -136,3 +136,30 @@ footer .widget-title {
 .copyright {
   color: #e2dfdf;
 }
+
+/* Attraction Filters. MOVE! */
+
+.attraction-filters label {
+  display: block;
+}
+
+/* Pagination */
+
+.pagination-nav {
+  font-size: 1.25em;
+  font-weight: bold;
+}
+
+.pagination-nav .page-numbers {
+    display: inline-block;    
+    padding: 0.25em 0.5em;
+    text-align: center;
+    width: 10%;
+}
+
+.pagination-nav .page-numbers.current {
+    padding-bottom: 0.25em;
+    color: white;
+    background-color: #1982d1;
+}
+
