Remove box shadow for posts.

--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ Author URI: http://cidneyhamilton.com
   padding: 0.5em 1.5em;
 }
 
-.single .hentry {
+.single .hentry,
+.page .hentry {
   box-shadow: none;
 }
 
